手册07 JVM 重做为折叠式自测版（概念/提问/答案/拓展/追问/锚点 六段式，12题）：补 GC 日志怎么读 + 方法区满排查，全题配可执行命令与 rrmcompute OOM 项目锚点